Fixing error. Images stretch in safari

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body, html{
 .S2{
     background-image: url(Screenshot2.png);
     background-size: cover;
-    background-position: center;
+    background-position: start;
     width: 100%;
     height: 100%;  
 }
@@ -93,7 +93,7 @@ body, html{
 .S3{
     background-image: url(Screenshot3.png);
     background-size: cover;
-    background-position: center;
+    background-position: start;
     width: 100%;
     height: 100%;  
 }
@@ -109,7 +109,7 @@ body, html{
 .S5{
     background-image: url(Screenshot5.png);
     background-size: cover;
-    background-position: center;
+    background-position: start;
     width: 100%;
     height: 100%;  
 }
@@ -117,7 +117,7 @@ body, html{
 .S6{
     background-image: url(Screenshot6.png);
     background-size: cover;
-    background-position: center;
+    background-position: start;
     width: 100%;
     height: 100%;  
 }
@@ -189,6 +189,7 @@ body, html{
     font-family: 'Courier New', Courier, monospace;
     font-size: 40px;
     flex-direction: column;
+    margin-top: 50px;
 }
 
 .mywork-inner{
